fixed spacing on p

--- a/personal-portfolio/src/styles.css
+++ b/personal-portfolio/src/styles.css
@@ -61,3 +61,7 @@ main {
     font-weight: 100;
     letter-spacing: 1px;
 }
+
+p {
+    margin-top: .2em;
+}
